Удалены лишние учебные методы